syntax = "proto3";

package workflow.action;
option go_package = "github.com/infraboard/workflow/api/pkg/action";

import "github.com/infraboard/mcube/cmd/protoc-gen-go-ext/extension/tag/tag.proto";
import "github.com/infraboard/mcube/pb/page/page.proto";
import "github.com/infraboard/mcube/pb/resource/base.proto";

service Service {
	rpc CreateAction(CreateActionRequest) returns(Action);
	rpc QueryAction(QueryActionRequest) returns(ActionSet);
	rpc DescribeAction(DescribeActionRequest) returns(Action);
	rpc UpdateAction(UpdateActionRequest) returns(Action);
	rpc DeleteAction(DeleteActionRequest) returns(Action);
}

// STEP_RUNNER step执行类型
enum RUNNER_TYPE {
	// 使用Node节点本地安装的Docker执行
	DOCKER = 0;
	// 使用K8s执行
	K8s = 1;
	// 本地执行, 用于在Node节点本地执行
	LOCAL = 2;
}

// Action 动作定义
message Action {
    // 名称
    string id = 19[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"_id" json:"id" validate:"required"'}
        ];
	// 图片
	string logo = 20[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"logo" json:"logo"'}
        ];
	// 展示名称
	string display_name = 21[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"display_name" json:"display_name"'}
        ];
	// 是否是最新版本, 最新版本只有一个
	bool is_latest = 22[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"is_latest" json:"is_latest"'}
        ];
    // 名称
    string name = 8[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"name" json:"name" validate:"required"'}
        ];
	// Action对应的版本, 推荐默认v1
	string version = 18[
		(google.protobuf.field_tag) = {struct_tag: 'json:"version" validate:"required"'}
		];
	// 资源版本
	int64 resource_version = 16 [
        (google.protobuf.field_tag) = {struct_tag: 'bson:"resource_version" json:"resource_version,omitempty"'}
        ];
	// 所属域
	string domain = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"domain" json:"domain"'}
        ];
	// 所属空间
	string namespace = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"namespace" json:"namespace"'}
        ];
	// 创建时间
	int64 create_at = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_at" json:"create_at"'}
        ];
	// 创建人
	string create_by = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"create_by" json:"create_by"'}
        ];
	// 更新时间
	int64 update_at = 5[
		(google.protobuf.field_tag) = {struct_tag: 'bson:"update_at" json:"update_at"'}
		];
	// 更新人
	string update_by = 6[
		(google.protobuf.field_tag) = {struct_tag: 'bson:"update_by" json:"update_by"'}
		];
	// 可见模式
	mcube.resource.VisiableMode visiable_mode = 15[
		(google.protobuf.field_tag) = {struct_tag: 'bson:"visiable_mode" json:"visiable_mode"'}
		];
	// 执行器类型, 默认采用Node节点本地Docker执行
	RUNNER_TYPE runner_type = 13[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"runner_type" json:"runner_type"'}
        ];
	// runner运行时参数
	map<string, string> runner_params = 17[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"runner_params" json:"runner_params"'}
        ];
	// step运行时的参数说明
	repeated RunParamDesc run_params = 14[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"run_params" json:"run_params"'}
        ];
	// 标签
	map<string, string> tags = 11[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"tags" json:"tags"'}
        ];
	// 描述
	string description = 12[
		(google.protobuf.field_tag) = {struct_tag: 'bson:"description" json:"description"'}
		];	
}

message RunnerParam {
	// 参数的值
	string value = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"value" json:"value"'}
        ];
	// 值描述
	string describe = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"describe" json:"describe"'}
        ];
}


message RunParamDesc {
	// 可选/必传
	bool required = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"required" json:"required"'}
        ];
	// 建的名称
	string key_name = 4[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"key_name" json:"key_name" validate:"required"'}
        ];
	// 建的描述
	string key_desc = 5[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"key_desc" json:"key_desc"'}
        ];
	// 默认值, action运行时如果未传人，会填充默认值
	string default_value = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"default_value" json:"default_value"'}
        ];
	// 值描述
	string value_desc = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"value_desc" json:"value_desc"'}
        ];
}

// ActionSet todo
message ActionSet {
    int64 total = 1[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"total" json:"total"'}
        ];
    repeated Action items = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"items" json:"items"'}
        ];
}

message CreateActionRequest {
	// 执行器类型, 默认采用Node节点本地Docker执行
	RUNNER_TYPE runner_type = 7[
        (google.protobuf.field_tag) = {struct_tag: 'json:"runner_type"'}
        ];
	// 所属域
	string domain = 9[
        (google.protobuf.field_tag) = {struct_tag: 'json:"domain" validate:"required"'}
        ];
	// 所属空间
	string namespace = 10[
        (google.protobuf.field_tag) = {struct_tag: 'json:"namespace" validate:"required"'}
        ];
	// 创建人
	string create_by = 11[
        (google.protobuf.field_tag) = {struct_tag: 'json:"create_by" validate:"required"'}
        ];
	// 图片
	string logo = 12[
        (google.protobuf.field_tag) = {struct_tag: 'json:"logo"'}
        ];
	// 名称
	string name = 1[
		(google.protobuf.field_tag) = {struct_tag: 'json:"name" validate:"required"'}
		];
	// Action对应的版本, 推荐默认v1
	string version = 8[
		(google.protobuf.field_tag) = {struct_tag: 'json:"version" validate:"required"'}
		];
	// 展示名称
	string display_name = 13[
        (google.protobuf.field_tag) = {struct_tag: 'json:"display_name"'}
        ];
	// 可见模式
	mcube.resource.VisiableMode visiable_mode = 6[
		(google.protobuf.field_tag) = {struct_tag: 'json:"visiable_mode"'}
		];
	// 运行时 Runner传人参数, 创建完成后不能修改, 要修改请新建版本
	map<string, string> runner_params = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"runner_params" json:"runner_params"'}
        ];
	// 运行时 用户传人的参数说明
	repeated RunParamDesc run_params = 3[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"run_params" json:"run_params"'}
        ];
	// 标签
	map<string, string> tags = 4[
		(google.protobuf.field_tag) = {struct_tag: 'json:"tags"'}
		];
	// 描述
	string description = 5[
		(google.protobuf.field_tag) = {struct_tag: 'json:"description"'}
		];
}

// UpdateActionRequest, 不能修改ActionRunner运行参数, 如果需要修改，请新建一个版本
message UpdateActionRequest {
	// 指定名称
	string name = 5[
		(google.protobuf.field_tag) = {struct_tag: 'json:"name" validate:"required"'}
		];
	// 指定版本
	string version = 6[
		(google.protobuf.field_tag) = {struct_tag: 'json:"version" validate:"required"'}
		];
	// 可见模式
	mcube.resource.VisiableMode visiable_mode = 1[
		(google.protobuf.field_tag) = {struct_tag: 'json:"visiable_mode"'}
		];
	// 运行时的参数说明
	repeated RunParamDesc run_params = 2[
        (google.protobuf.field_tag) = {struct_tag: 'bson:"run_params" json:"run_params"'}
        ];
	// 标签
	map<string, string> tags = 3[
		(google.protobuf.field_tag) = {struct_tag: 'json:"tags"'}
		];
	// 描述
	string description = 4[
		(google.protobuf.field_tag) = {struct_tag: 'json:"description"'}
		];
}

message DescribeActionRequest {
	// id
	string id = 4[
		(google.protobuf.field_tag) = {struct_tag: 'json:"id"'}
		];
	// 名称
	string name = 1[
		(google.protobuf.field_tag) = {struct_tag: 'json:"name"'}
		];
	// 对应的版本
	string version = 3[
		(google.protobuf.field_tag) = {struct_tag: 'json:"version"'}
		];
}

message DeleteActionRequest {
	// 指定名称
	string name = 1[
		(google.protobuf.field_tag) = {struct_tag: 'json:"name" validate:"required"'}
		];
	// 指定版本
	string version = 3[
		(google.protobuf.field_tag) = {struct_tag: 'json:"version" validate:"required"'}
		];
	// 唯一空间
	string namespace = 2[
		(google.protobuf.field_tag) = {struct_tag: 'json:"namespace" validate:"required"'}
		];
}

// QueryPipelineRequest 查询Book请求
message QueryActionRequest {
    page.PageRequest page = 1;
	string namespace = 4;
    string name = 2;
	string version = 3;
}